# solenoid

./: .gitignore  Cargo.toml  Makefile  README.markdown  rt.c  test.sh
examples/: codegen.rs  mimcsponge.rs
runtime/: Makefile  arith.ll  contract.h  hashmap.c  hashmap.h  main.c  main.rs  rt.c  rt.h  sha3.c  sha3.h  upow.ll  utils.c  utils.h
src/: bin.rs  cffi.rs  cffigen.rs  compiler.rs  lib.rs  solc.rs
src/bpf_codegen/: mod.rs
src/ethabi/: contract.rs  decoder.rs  encoder.rs  event.rs  event_param.rs  filter.rs  function.rs  mod.rs  operation.rs  param.rs  signature.rs  tuple_param.rs  util.rs
src/ethabi/param_type/: deserialize.rs  param_type.rs  reader.rs  writer.rs
src/ethabi/token/: mod.rs  strict.rs  token.rs
src/evm/: error.rs  instructions.rs  mod.rs
src/evm_opcode/: error.rs  instructions.rs  mod.rs
src/opcode/: instructions.rs  mod.rs
test/contracts/: set.sol
tests/: build.sh  contracts_test.rs  integration_tests.rs  main.c  run.c  run.sh
tests/contracts/: address.sol  ballot.sol  erc20.sol  safemath.sol  set.sol
tests/main/: main_address.c  main_erc20.c  main_flipper.c  main_int.c  main_safemath.c  main_set.c
