[package]
name = "libsolenoid"
version = "0.1.0"
authors = ["Ricky Han <liha@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsevmasm = "0.5.0"
hex = "*"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"] }
structopt = { version = "0.3", default-features = false }
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.0"
env_logger = "0.7.1"


[[bin]]
name = "solenoid"
path = "src/bin.rs"
